--- a/cli2/package.json
+++ b/cli2/package.json
@@ -16,8 +16,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "lockr": "^0.8.5",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
